refs : #18643 : Optimized filteration using repository