@@ -25,6 +25,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.remiges.logharbour.model.ChangeDetails;
 import com.remiges.logharbour.model.ChangeInfo;
 import com.remiges.logharbour.constant.LogharbourConstants;
+import com.remiges.logharbour.exception.InvalidTimestampRangeException;
 import com.remiges.logharbour.model.GetLogsResponse;
 import com.remiges.logharbour.model.LogData;
 import com.remiges.logharbour.model.LogEntry;
@@ -117,21 +118,19 @@ public class LHLogger {
     }
 
     /**
-     * Method to fetch log changes based on various parameters
-     * 
-     * 
-     * @param querytoken Query token (not used in this method).
-     * @param app        Application identifier.
-     * @param who        User identifier.
-     * @param className  Class name.
-     * @param instance   Instance identifier.
-     * @param field      Field identifier.
-     * @param fromtsStr  Start timestamp in ISO 8601 format.
-     * @param totsStr    End timestamp in ISO 8601 format.
-     * @param ndays      Number of days for which logs are required.
-     * @return List of log entries matching the specified parameters.
-     * @throws Exception If an error occurs during log retrieval or parameter
-     *                   parsing.
+     * Retrieves the list of log entries based on specified parameters.
+     *
+     * @param querytoken The query token.
+     * @param app        The application name.
+     * @param who        The user identifier.
+     * @param className  The class name.
+     * @param instance   The instance identifier.
+     * @param field      The field to filter by.
+     * @param fromtsStr  The start timestamp in string format.
+     * @param totsStr    The end timestamp in string format.
+     * @param ndays      The number of days for fetching logs.
+     * @return The list of log entries.
+     * @throws Exception If an error occurs during processing.
      */
 
     public List<LogEntry> getChanges(String querytoken, String app, String who, String className, String instance,
@@ -143,122 +142,88 @@ public class LHLogger {
 
         Instant fromts = null;
         Instant tots = null;
-        /**
-         * Parsing timestamps from strings to Instant objects
-         * 
-         */
 
         try {
+
+            // Parsing start timestamp
             if (fromtsStr != null && !fromtsStr.isEmpty()) {
                 fromts = Instant.parse(fromtsStr);
                 logger.debug("Parsed fromts: {}", fromts);
-
             }
+
+            // Parsing end timestamp
             if (totsStr != null && !totsStr.isEmpty()) {
                 tots = Instant.parse(totsStr);
                 logger.debug("Parsed tots: {}", tots);
             }
         } catch (DateTimeParseException e) {
+
+            // Handling invalid timestamp format
             logger.error("Invalid timestamp format: fromtsStr={}, totsStr={}", fromtsStr, totsStr, e);
 
             throw new IllegalArgumentException(
                     "Invalid timestamp format. Please provide timestamps in ISO 8601 format.");
         }
-        /**
-         * Validating that fromts is before tots if both are specified
-         * 
-         */
 
+        // Validating timestamp range
         if (fromts != null && tots != null && fromts.isAfter(tots)) {
             logger.error("fromts must be before tots: fromts={}, tots={}", fromts, tots);
-
-            throw new IllegalArgumentException("fromts must be before tots");
+            throw new InvalidTimestampRangeException("fromts must be before tots");
         }
 
-        final Instant finalFromts = fromts;
-        final Instant finalTots = tots;
-
-        List<LogEntry> logs;
+        List<LogEntry> logs = new ArrayList<>();
 
         LogEntry.LogType logType = LogEntry.LogType.CHANGE;
 
-        /**
-         * Fetching logs based on specified time range and other parameters
-         */
-
-        /**
-         * Check if both fromts and tots are specified
-         * 
-         */
+        // Fetching logs based on specified parameters
         if (fromts != null && tots != null) {
+            logger.debug("Fetching logs between {} and {}", fromts, tots);
 
-            logger.debug("Fetching logs between {} and {}", finalFromts, finalTots);
-
-            // Fetch logs and filter them based on the provided time range
-            logs = logEntryRepository.findByAppAndClassNameAndInstanceIdAndLogType(app, className, instance, logType)
-                    .stream()
-                    .filter(log -> {
-                        Instant logInstant = Instant.parse(log.getWhen());
-                        return !logInstant.isBefore(finalFromts) && !logInstant.isAfter(finalTots);
-                    })
-                    .collect(Collectors.toList());
+            logs = logEntryRepository.findByAppAndClassNameAndInstanceIdAndLogTypeAndWhenBetween(app, className,
+                    instance, logType, fromts.toString(), tots.toString());
         } else if (fromts != null) {
+            logger.debug("Fetching logs after {}", fromts);
 
-            logger.debug("Fetching logs after {}", finalFromts);
+            logs = logEntryRepository.findByAppAndClassNameAndInstanceIdAndLogTypeAndWhenAfter(app, className, instance,
+                    logType, fromts.toString());
 
-            // If only fromts is specified, fetch logs and filter them to be after fromts
-            logs = logEntryRepository.findByAppAndClassNameAndInstanceIdAndLogType(app, className, instance, logType)
-                    .stream()
-                    .filter(log -> !Instant.parse(log.getWhen()).isBefore(finalFromts))
-                    .collect(Collectors.toList());
         } else if (tots != null) {
 
-            logger.debug("Fetching logs before {}", finalTots);
-            // If only tots is specified, fetch logs and filter them to be before tots
-            logs = logEntryRepository.findByAppAndClassNameAndInstanceIdAndLogType(app, className, instance, logType)
-                    .stream()
-                    .filter(log -> !Instant.parse(log.getWhen()).isAfter(finalTots))
-                    .collect(Collectors.toList());
-        } else if (ndays > 0) {
+            logger.debug("Fetching logs before {}", tots);
 
-            // If ndays is specified, calculate the time range from now to ndays ago
+            logs = logEntryRepository.findByAppAndClassNameAndInstanceIdAndLogTypeAndWhenBefore(app, className,
+                    instance, logType, tots.toString());
+        } else if (ndays > 0) {
+            // Fetching logs for the past ndays
             Instant end = Instant.now();
             Instant start = end.minusSeconds(ndays * 86400L);
 
             logger.debug("Fetching logs for the past {} days ({} to {})", ndays, start, end);
 
-            // Fetch logs and filter them based on the calculated time range
-            logs = logEntryRepository.findByAppAndClassNameAndInstanceIdAndLogType(app, className, instance, logType)
-                    .stream()
-                    .filter(log -> {
-                        Instant logInstant = Instant.parse(log.getWhen());
-                        return !logInstant.isBefore(start) && !logInstant.isAfter(end);
-                    })
-                    .collect(Collectors.toList());
+            logs = logEntryRepository.findByAppAndClassNameAndInstanceIdAndLogTypeAndWhenBetween(app, className,
+                    instance, logType, start.toString(), end.toString());
         } else {
-
+            // Fetching all logs without time range filter
             logger.debug("Fetching all logs without time range filter");
 
-            // If no time range or ndays is specified, fetch logs without any additional
-            // filtering
             logs = logEntryRepository.findByAppAndClassNameAndInstanceIdAndLogType(app, className, instance, logType);
         }
 
-        // Optional filtering by 'who' and 'field'
+        // Optional filtering by 'who'
         if (who != null && !who.isEmpty()) {
-
             logger.debug("Filtering logs by who: {}", who);
-            logs = logs.stream().filter(log -> who.equals(log.getWho())).toList();
+            logs = logs.stream().filter(log -> who.equals(log.getWho())).collect(Collectors.toList());
         }
-        if (field != null && !field.isEmpty()) {
 
+        // Optional filtering by 'field'
+        if (field != null && !field.isEmpty()) {
             logger.debug("Filtering logs by field: {}", field);
             logs = logs.stream()
                     .filter(log -> {
                         Object data = log.getData();
                         return data instanceof Map && ((Map<?, ?>) data).containsKey(field);
                     })
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         logger.debug("Returning {} log entries", logs.size());
@@ -427,125 +392,135 @@ public class LHLogger {
 
     public List<LogEntry> getSetlogs(LogharbourRequestBo logharbourRequestBo) throws Exception {
 
-		try {
-			System.out.println("my first request data here !!!!!!!!!");
-			if (logharbourRequestBo.getQueryToken() == null && logharbourRequestBo.getQueryToken().isEmpty()) {
-				throw new IllegalArgumentException("query token can not pass null or empty");
-			}
-			return this.processSearch(logharbourRequestBo,logharbourRequestBo.getSetAttr());
-		} catch (Exception ex) {
-			ex.printStackTrace();
-		}
-		return this.processSearch(logharbourRequestBo,logharbourRequestBo.getSetAttr());
-	}	
+        try {
+            System.out.println("my first request data here !!!!!!!!!");
+            if (logharbourRequestBo.getQueryToken() == null && logharbourRequestBo.getQueryToken().isEmpty()) {
+                throw new IllegalArgumentException("query token can not pass null or empty");
+            }
+            return this.processSearch(logharbourRequestBo, logharbourRequestBo.getSetAttr());
+        } catch (Exception ex) {
+            ex.printStackTrace();
+        }
+        return this.processSearch(logharbourRequestBo, logharbourRequestBo.getSetAttr());
+    }
 
-	@Autowired
-	  private ElasticsearchOperations elasticsearchOperations;	
-		  public List<LogEntry> processSearch(LogharbourRequestBo logharbourRequestBo,String getsetAttr) {
+    @Autowired
+    private ElasticsearchOperations elasticsearchOperations;
 
-			  
-			  try {
-				  BoolQuery.Builder boolQueryBuilder = new BoolQuery.Builder();
-				  
-			        if (logharbourRequestBo.getApp() != null && !logharbourRequestBo.getApp().isEmpty()) {
-			            boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.APP).query("Kra"))._toQuery());
-			        }
-			        if (logharbourRequestBo.getWho() != null && !logharbourRequestBo.getWho().isEmpty()) {
-			            boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.WHO).query("User3"))._toQuery());
-			        }
-			        if (logharbourRequestBo.getClassName() != null && !logharbourRequestBo.getClassName().isEmpty()) {
-			            boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.CLASS_NAME).query(logharbourRequestBo.getClassName()))._toQuery());
-			        }
-			        if (logharbourRequestBo.getOp() != null && !logharbourRequestBo.getOp().isEmpty()) {
-			            boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.OP).query(logharbourRequestBo.getOp()))._toQuery());
-			        }
-			        if (logharbourRequestBo.getRemoteIP() != null && !logharbourRequestBo.getRemoteIP().isEmpty()) {
-			            boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.REMOTE_IP).query(logharbourRequestBo.getRemoteIP()))._toQuery());
-			        } 
-			        if (logharbourRequestBo.getFromTs() != null) {
-			            boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.WHEN).query(logharbourRequestBo.getFromTs().toString()))._toQuery());
-			        }
-			        if (logharbourRequestBo.getToTs() != null) {
-			            boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.WHEN).query(logharbourRequestBo.getToTs().toString()))._toQuery());
-			        }
-//			        if (logharbourRequestBo.getNDays() == null) {
-//			            boolQueryBuilder.must(MatchQuery.of(m -> m.field("who").query(logharbourRequestBo.getNDays()))._toQuery());
-//			        }
-				    if (logharbourRequestBo.getInstance() != null) {
-			            boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.INSTANCE_ID).query(logharbourRequestBo.getInstance()))._toQuery());
-			        } 
-			        if (logharbourRequestBo.getType() != null && !logharbourRequestBo.getType().isEmpty()) {
-			            boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.LOG_TYPE).query(logharbourRequestBo.getType()))._toQuery());
-			        }
-		/*********************************************************************************************************************/
-//				  Query query = NativeQuery.builder()
-//			                .withQuery(boolQueryBuilder.build()._toQuery())
-//			                .build();
-//				  			  
-//						SearchHits<LogEntry> searchHits = elasticsearchOperations.search(query, LogEntry.class);
-//						List<LogEntry> loggerList = searchHits.getSearchHits()
-//						    .stream()
-//						    .map(SearchHit::getContent)
-//						    .toList();
-//				  return loggerList;
-				  
-		/*********************************************************************************************************************/
-			        
-			        // Create aggregation based on getsetAttr with .keyword field
-			        Aggregation aggregation = Aggregation.of(a -> a
-			            .terms(t -> t.field(getsetAttr + ".keyword").size(10))
-			        );
+    public List<LogEntry> processSearch(LogharbourRequestBo logharbourRequestBo, String getsetAttr) {
 
-			       
-			        Query query = NativeQuery.builder()
-			                .withQuery(boolQueryBuilder.build()._toQuery())
-			                .withAggregation("agg", aggregation)
-			                .build();
+        try {
+            BoolQuery.Builder boolQueryBuilder = new BoolQuery.Builder();
 
-			        SearchHits<LogEntry> searchHits = elasticsearchOperations.search(query, LogEntry.class);
+            if (logharbourRequestBo.getApp() != null && !logharbourRequestBo.getApp().isEmpty()) {
+                boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.APP).query("Kra"))._toQuery());
+            }
+            if (logharbourRequestBo.getWho() != null && !logharbourRequestBo.getWho().isEmpty()) {
+                boolQueryBuilder.must(MatchQuery.of(m -> m.field(LogharbourConstants.WHO).query("User3"))._toQuery());
+            }
+            if (logharbourRequestBo.getClassName() != null && !logharbourRequestBo.getClassName().isEmpty()) {
+                boolQueryBuilder.must(MatchQuery
+                        .of(m -> m.field(LogharbourConstants.CLASS_NAME).query(logharbourRequestBo.getClassName()))
+                        ._toQuery());
+            }
+            if (logharbourRequestBo.getOp() != null && !logharbourRequestBo.getOp().isEmpty()) {
+                boolQueryBuilder.must(MatchQuery
+                        .of(m -> m.field(LogharbourConstants.OP).query(logharbourRequestBo.getOp()))._toQuery());
+            }
+            if (logharbourRequestBo.getRemoteIP() != null && !logharbourRequestBo.getRemoteIP().isEmpty()) {
+                boolQueryBuilder.must(MatchQuery
+                        .of(m -> m.field(LogharbourConstants.REMOTE_IP).query(logharbourRequestBo.getRemoteIP()))
+                        ._toQuery());
+            }
+            if (logharbourRequestBo.getFromTs() != null) {
+                boolQueryBuilder.must(MatchQuery
+                        .of(m -> m.field(LogharbourConstants.WHEN).query(logharbourRequestBo.getFromTs().toString()))
+                        ._toQuery());
+            }
+            if (logharbourRequestBo.getToTs() != null) {
+                boolQueryBuilder.must(MatchQuery
+                        .of(m -> m.field(LogharbourConstants.WHEN).query(logharbourRequestBo.getToTs().toString()))
+                        ._toQuery());
+            }
+            // if (logharbourRequestBo.getNDays() == null) {
+            // boolQueryBuilder.must(MatchQuery.of(m ->
+            // m.field("who").query(logharbourRequestBo.getNDays()))._toQuery());
+            // }
+            if (logharbourRequestBo.getInstance() != null) {
+                boolQueryBuilder.must(MatchQuery
+                        .of(m -> m.field(LogharbourConstants.INSTANCE_ID).query(logharbourRequestBo.getInstance()))
+                        ._toQuery());
+            }
+            if (logharbourRequestBo.getType() != null && !logharbourRequestBo.getType().isEmpty()) {
+                boolQueryBuilder.must(
+                        MatchQuery.of(m -> m.field(LogharbourConstants.LOG_TYPE).query(logharbourRequestBo.getType()))
+                                ._toQuery());
+            }
+            /*********************************************************************************************************************/
+            // Query query = NativeQuery.builder()
+            // .withQuery(boolQueryBuilder.build()._toQuery())
+            // .build();
+            //
+            // SearchHits<LogEntry> searchHits = elasticsearchOperations.search(query,
+            // LogEntry.class);
+            // List<LogEntry> loggerList = searchHits.getSearchHits()
+            // .stream()
+            // .map(SearchHit::getContent)
+            // .toList();
+            // return loggerList;
 
-//			        // Process aggregation results
-//			        Aggregations aggregations = searchHits.getAggregations();
-//			        if (aggregations != null && aggregations.get(getsetAttr) != null) {
-//			            // Process the aggregation results as needed
-//			        }
+            /*********************************************************************************************************************/
 
-			        List<LogEntry> loggerList = searchHits.getSearchHits()
-			                .stream()
-			                .map(SearchHit::getContent)
-			                .toList();
-			        return loggerList;
-			        
-			        
-				  
-				  }catch (Exception ex) {
-					ex.printStackTrace();
-				}
-				  return null;
-			  
-		  }
-	
-//	// Pattern for attribute validation
-//    private static final Pattern PATTERN = Pattern.compile("^[a-z]{1,9}$");
-//
-//    // Allowed attributes
-//    private static final Map<String, Boolean> ALLOWED_ATTRIBUTES = new HashMap<>();
-//
-//    static {
-//        ALLOWED_ATTRIBUTES.put("app", true);
-//        ALLOWED_ATTRIBUTES.put("typeConst", true);
-//        ALLOWED_ATTRIBUTES.put("op", true);
-//        ALLOWED_ATTRIBUTES.put("instance", true);
-//        ALLOWED_ATTRIBUTES.put("class", true);
-//        ALLOWED_ATTRIBUTES.put("module", true);
-//        ALLOWED_ATTRIBUTES.put("pri", true);
-//        ALLOWED_ATTRIBUTES.put("status", true);
-//        ALLOWED_ATTRIBUTES.put("remote_ip", true);
-//        ALLOWED_ATTRIBUTES.put("system", true);
-//        ALLOWED_ATTRIBUTES.put("who", true);
-//        ALLOWED_ATTRIBUTES.put("field", true);
-//    }
-    
+            // Create aggregation based on getsetAttr with .keyword field
+            Aggregation aggregation = Aggregation.of(a -> a
+                    .terms(t -> t.field(getsetAttr + ".keyword").size(10)));
 
+            Query query = NativeQuery.builder()
+                    .withQuery(boolQueryBuilder.build()._toQuery())
+                    .withAggregation("agg", aggregation)
+                    .build();
+
+            SearchHits<LogEntry> searchHits = elasticsearchOperations.search(query, LogEntry.class);
+
+            // // Process aggregation results
+            // Aggregations aggregations = searchHits.getAggregations();
+            // if (aggregations != null && aggregations.get(getsetAttr) != null) {
+            // // Process the aggregation results as needed
+            // }
+
+            List<LogEntry> loggerList = searchHits.getSearchHits()
+                    .stream()
+                    .map(SearchHit::getContent)
+                    .toList();
+            return loggerList;
+
+        } catch (Exception ex) {
+            ex.printStackTrace();
+        }
+        return null;
+
+    }
+
+    // // Pattern for attribute validation
+    // private static final Pattern PATTERN = Pattern.compile("^[a-z]{1,9}$");
+    //
+    // // Allowed attributes
+    // private static final Map<String, Boolean> ALLOWED_ATTRIBUTES = new
+    // HashMap<>();
+    //
+    // static {
+    // ALLOWED_ATTRIBUTES.put("app", true);
+    // ALLOWED_ATTRIBUTES.put("typeConst", true);
+    // ALLOWED_ATTRIBUTES.put("op", true);
+    // ALLOWED_ATTRIBUTES.put("instance", true);
+    // ALLOWED_ATTRIBUTES.put("class", true);
+    // ALLOWED_ATTRIBUTES.put("module", true);
+    // ALLOWED_ATTRIBUTES.put("pri", true);
+    // ALLOWED_ATTRIBUTES.put("status", true);
+    // ALLOWED_ATTRIBUTES.put("remote_ip", true);
+    // ALLOWED_ATTRIBUTES.put("system", true);
+    // ALLOWED_ATTRIBUTES.put("who", true);
+    // ALLOWED_ATTRIBUTES.put("field", true);
+    // }
 
 }
